@@ -1,3 +1,8 @@
+########### 2015-6-3 #################
+ALTER TABLE suplychain_flashsale_orderlist  MODIFY COLUMN updated datetime;
+ALTER TABLE suplychain_flashsale_orderdetail  MODIFY COLUMN created datetime;
+ALTER TABLE suplychain_flashsale_orderdetail  MODIFY COLUMN updated datetime;
+
 ########### 2015-6-2 #################
 alter table suplychain_flashsale_orderdetail add column non_arrival_quantity int(11) not Null after arrival_quantity;
 alter table suplychain_flashsale_orderdetail add column inferior_quantity int(11) not Null after non_arrival_quantity;
